--- a/src/Rap.Conn/Rap.Conn.csproj
+++ b/src/Rap.Conn/Rap.Conn.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <ProjectReference Include="../Rap/Rap.csproj" />
+    <ProjectReference Include="../Rap.FrameData/Rap.FrameData.csproj" />
   </ItemGroup>
 
 </Project>
