--- a/src/Rap.FrameData/Rap.FrameData.csproj
+++ b/src/Rap.FrameData/Rap.FrameData.csproj
@@ -5,8 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="../Rap.Conn/Rap.Conn.csproj" />
-    <ProjectReference Include="../Rap.FrameData/Rap.FrameData.csproj" />
+    <ProjectReference Include="../Rap/Rap.csproj" />
   </ItemGroup>
 
 </Project>
